--- a/src/Meditation.scss
+++ b/src/Meditation.scss
@@ -6,11 +6,13 @@
      align-items: center;
      justify-content: center;
      max-width: 100vw;
-     max-height: 100vh;
+     max-height: calc(100vh - (-108px));
  }
 
  h1 {
-     margin: 45px;
+     color: #FFFFFF;
+     margin-top: 40px;
+     margin-bottom: 60px;
  }
 
  .time-display {
@@ -38,8 +40,12 @@
      align-items: center;
      min-width: 100%;
      max-height: 50%;
-     background-color: #e9e9e99c;
      border-radius: 66px 66px 0px 0px;
+     transition: opacity 1s ease-out;
+
+     @include breakpoints(sm) {
+        //  margin-top: 30px;
+     }
  }
 
  .time-btns,
@@ -49,11 +55,16 @@
 
      @include breakpoints(sm) {
          width: 90%;
+         margin-top: 65px;
      }
+
+    //  @include breakpoints(md) {
+    //      margin-top: 77px;
+    //  }
 
      display: flex;
      justify-content: space-around;
-     margin-top: 60px;
+     margin-top: 45px;
  }
 
  .time-btns button,
@@ -62,15 +73,42 @@
      height: 60px;
      border: 1px solid transparent;
      border-radius: 50%;
-     /* color: #ac5f5f; */
-     background-color: rgb(214, 214, 214);
+     color: #56546B;
+     background: rgba(255, 255, 255, 0.637);
      font-size: 24px;
+
+
  }
 
  .control-time-btns button {
-     width: 100px;
-     height: 30px;
+     color: #56546B;
+     background: rgba(255, 255, 255, 0.637);
+     font-size: 16px;
+     width: 110px;
+     height: 40px;
+     border-radius: 50px;
+     margin: 10px;
      border: 1px solid transparent;
-     border-radius: 30%;
-     background-color: rgb(214, 214, 214);
+     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.12);
+ }
+
+ video {
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
+     position: fixed;
+     //  top: 0%;
+     //  left: 0%;
+     z-index: -10;
+ }
+
+ .vid-container {
+     width: 100%;
+     height: 100%;
+ }
+
+ // proggress bar
+
+ .CircularProgressbar .CircularProgressbar-text {
+     fill: #fff;
  }
