--- a/src/Meditation.scss
+++ b/src/Meditation.scss
@@ -7,6 +7,10 @@
      justify-content: center;
      max-width: 100vw;
      max-height: calc(100vh - (-108px));
+     
+     @include breakpoints(sm) {
+         max-height: calc(100vh - (-220px));
+    }
  }
 
  h1 {
@@ -102,7 +106,7 @@
      height: 60px;
      border-radius: 50%;
      color: #56546B;
-     background: rgba(255, 255, 255, 0.637);
+     background: #fff;
      font-size: 24px;
      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.12);
      border: 2px solid #726f8f;
