--- a/src/Meditation.scss
+++ b/src/Meditation.scss
@@ -22,10 +22,9 @@
  h4 {
      color: #FFFFFF;
      margin-bottom: 30px;
-     font-family: 'Work Sans', sans-serif;
+     font-weight: 400;
      font-style: italic;
      text-align: center;
-     letter-spacing: 0.6px;
      line-height: 1.3;
 
      @include breakpoints(sm) {
@@ -43,7 +42,6 @@
      height: 250px;
      border: 1px solid #000;
      border-radius: 50%;
-
      display: flex;
      align-items: center;
      justify-content: center;
